[kamana] fixed alignment of validation message in register page

--- a/com.cdac.final.project.demo1/src/main/resources/static/css/styleRegistration.css
+++ b/com.cdac.final.project.demo1/src/main/resources/static/css/styleRegistration.css
@@ -166,7 +166,7 @@ body {
 	width: 100%;
 	left: 0;
 	z-index: -1;
-	height: 100%;
+	height: 100vh;
 	overflow: auto;
 }
 
